@@ -95,6 +95,12 @@ libxbee instance functions
 <P>
 <B><A HREF="../man3/xbee_shutdown.3.html">xbee_shutdown</A></B>(3)        - shutdown an instance of libxbee
 
+<P>
+<B><A HREF="../man3/xbee_dataSet.3.html">xbee_dataSet</A></B>(3)         - associate data with a libxbee instance
+
+<P>
+<B><A HREF="../man3/xbee_dataGet.3.html">xbee_dataGet</A></B>(3)         - retrieve the data associated with a libxbee instance
+
 
 
 <P>
@@ -227,6 +233,6 @@ miscellaneous functions
 This document was created by
 <A HREF="/cgi-bin/man/man2html">man2html</A>,
 using the manual pages.<BR>
-Time: 21:47:26 GMT, June 11, 2012
+Time: 22:36:54 GMT, December 16, 2012
 </BODY>
 </HTML>
