@@ -1,0 +1,110 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<HTML><HEAD><TITLE>Man page of XBEE_DATAGET</TITLE>
+</HEAD><BODY>
+<H1>XBEE_DATAGET</H1>
+Section: Linux Programmer's Manual (3)<BR>Updated: 16-Dec-2012<BR><A HREF="#index">Index</A>
+<A HREF="../index.html">Return to Main Contents</A><HR>
+
+<A NAME="lbAB">&nbsp;</A>
+<H2>NAME</H2>
+
+xbee_dataGet, xbee_dataSet
+<A NAME="lbAC">&nbsp;</A>
+<H2>SYNOPSIS</H2>
+
+<B>#include &lt;<A HREF="file:///usr/include/xbee.h">xbee.h</A>&gt;</B>
+
+<P>
+<B>xbee_err xbee_dataSet(struct xbee *</B><I>xbee</I><B>, void *</B><I>newData</I><B>, void **</B><I>oldData</I><B>);</B>
+
+<P>
+<B>xbee_err xbee_dataGet(struct xbee *</B><I>xbee</I><B>, void **</B><I>curData</I><B>);</B>
+
+
+<A NAME="lbAD">&nbsp;</A>
+<H2>DESCRIPTION</H2>
+
+<B>xbee_dataSet</B>()
+
+allows you to associate any data you wish with a libxbee instance.
+This data will then be avaliable from anywhere that you have access to the instance, and works identically to the functions
+<B><A HREF="../man3/xbee_conDataSet.3.html">xbee_conDataSet</A></B>(3)<B>and <A HREF="../man3/xbee_conDataGet.3.html">xbee_conDataGet</A></B>(3)<B>.</B>
+
+<P>
+<I>xbee</I>
+
+indicates which instance you would like to use, and
+<I>newData</I>
+
+indicates the data you wish to associate.
+<P>
+The
+<I>oldData</I>
+
+parameter allows you to retrieve the data that was assigned before you assigned new data.
+If it is
+<B>NULL</B>
+
+then the data will not be returned.
+<P>
+The
+<B>xbee_dataGet</B>()
+
+function allows you to retrieve the current data, without assigning new data to the instance.
+<A NAME="lbAE">&nbsp;</A>
+<H3>Return Value</H3>
+
+On success these functions will return XBEE_ENONE, otherwise an error number from
+<I>enum xbee_errors</I> (as specified in <I>&lt;<A HREF="file:///usr/include/xbee.h">xbee.h</A>&gt;</I>)
+
+<A NAME="lbAF">&nbsp;</A>
+<H2>EXAMPLE</H2>
+
+
+<PRE>
+#include &lt;<A HREF="file:///usr/include/xbee.h">xbee.h</A>&gt;
+
+struct xbee *xbee;
+struct my_struct my_info;
+
+/* initialize xbee, using xbee_setup() */
+
+/* keep scope in mind! if this function returns, the pointer will be invalid */
+if (xbee_dataSet(xbee, &amp;my_info, NULL) != XBEE_ENONE) return;
+</PRE>
+
+
+<A NAME="lbAG">&nbsp;</A>
+<H2>AUTHOR</H2>
+
+Attie Grande &lt;<A HREF="mailto:attie@attie.co.uk">attie@attie.co.uk</A>&gt; 
+<A NAME="lbAH">&nbsp;</A>
+<H2>SEE ALSO</H2>
+
+<B><A HREF="../man3/libxbee.3.html">libxbee</A></B>(3),
+
+<B><A HREF="../man3/xbee_setup.3.html">xbee_setup</A></B>(3)
+
+<P>
+<P>
+
+<HR>
+<A NAME="index">&nbsp;</A><H2>Index</H2>
+<DL>
+<DT><A HREF="#lbAB">NAME</A><DD>
+<DT><A HREF="#lbAC">SYNOPSIS</A><DD>
+<DT><A HREF="#lbAD">DESCRIPTION</A><DD>
+<DL>
+<DT><A HREF="#lbAE">Return Value</A><DD>
+</DL>
+<DT><A HREF="#lbAF">EXAMPLE</A><DD>
+<DT><A HREF="#lbAG">AUTHOR</A><DD>
+<DT><A HREF="#lbAH">SEE ALSO</A><DD>
+</DL>
+<HR>
+This document was created by
+<A HREF="/cgi-bin/man/man2html">man2html</A>,
+using the manual pages.<BR>
+Time: 22:36:54 GMT, December 16, 2012
+</BODY>
+</HTML>
