@@ -85,6 +85,10 @@ libxbee instance functions
 .BR xbee_modeGet "(3)         - retrieve the mode of a given libxbee instance"
 .sp 0                         
 .BR xbee_shutdown "(3)        - shutdown an instance of libxbee"
+.sp 0                         
+.BR xbee_dataSet "(3)         - associate data with a libxbee instance"
+.sp 0                         
+.BR xbee_dataGet "(3)         - retrieve the data associated with a libxbee instance"
 .fi                           
 .in                           
 .sp 2                         
