@@ -216,3 +216,22 @@ EXPORT xbee_err xbee_attachEOFCallback(struct xbee *xbee, void (*eofCallback)(st
       xbee->iface.rx->eofCallback = (void(*)(struct xbee *xbee, struct xbee_rxInfo *rxInfo))eofCallback;
       return XBEE_ENONE;
 }
+
+EXPORT xbee_err xbee_dataSet(struct xbee *xbee, void *newData, void **oldData) {
+	if (!xbee) return XBEE_EMISSINGPARAM;
+#ifndef XBEE_DISABLE_STRICT_OBJECTS
+	if (xbee_validate(xbee) != XBEE_ENONE) return XBEE_EINVAL;
+#endif /* XBEE_DISABLE_STRICT_OBJECTS */
+	if (oldData) *oldData = xbee->userData;
+	xbee->userData = newData;
+	return XBEE_ENONE;
+}
+
+EXPORT xbee_err xbee_dataGet(struct xbee *xbee, void **curData) {
+	if (!xbee || !curData) return XBEE_EMISSINGPARAM;
+#ifndef XBEE_DISABLE_STRICT_OBJECTS
+	if (xbee_conValidate(xbee) != XBEE_ENONE) return XBEE_EINVAL;
+#endif /* XBEE_DISABLE_STRICT_OBJECTS */
+	*curData = xbee->userData;
+	return XBEE_ENONE;
+}
